[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://art/bulletDark1_outline.png" type="Texture" id=2]
[ext_resource path="res://art/bulletBlue2_outline.png" type="Texture" id=3]
[ext_resource path="res://art/bulletRed2_outline.png" type="Texture" id=4]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "black",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.03965
height = 8.51614

[node name="Bullet" type="RigidBody2D"]
collision_layer = 2
collision_mask = 23
mode = 2
mass = 0.09
gravity_scale = 4.37
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )
speed = 10000

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "red"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 50.0
autostart = true

[node name="Explosion" parent="." instance=ExtResource( 5 )]
visible = false
scale = Vector2( 0.5, 0.5 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
