[gd_scene load_steps=9 format=2]

[ext_resource path="res://misc/Explosion.tscn" type="PackedScene" id=1]
[ext_resource path="res://weapons/Bullet.gd" type="Script" id=3]
[ext_resource path="res://assets/bulletBlue2_outline.png" type="Texture" id=4]
[ext_resource path="res://assets/bulletRed2_outline.png" type="Texture" id=5]
[ext_resource path="res://assets/bulletDark1_outline.png" type="Texture" id=6]
[ext_resource path="res://assets/sfx/weapons/PistolFire.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.43298
height = 4.21491

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "black",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[node name="Bullet" type="KinematicBody2D" groups=[
"Bullet_Colliders",
"bullets",
]]
collision_layer = 2147483679
collision_mask = 31
collision/safe_margin = 0.5
script = ExtResource( 3 )
speed = 3000

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"bullets",
]]
position = Vector2( 0.146673, -0.125128 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Explosion" parent="." instance=ExtResource( 1 )]
visible = false
scale = Vector2( 0.1, 0.1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.223624, -0.160765 )
scale = Vector2( 0.171867, 0.12665 )
frames = SubResource( 2 )
animation = "black"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Gunsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 0.097
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
